// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Delta tests without history > Partition tests > Children 1`] = `
"
Program draw a rectangle
    FORWARD undefined
"
`;

exports[`Repository tests with history > Partition tests > Children 1`] = `
"
Program undefined
    FORWARD undefined
"
`;

exports[`Repository tests without history > Partition tests > Children 1`] = `
"
Program draw a rectangle
    FORWARD undefined
"
`;
